--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
   --gray-strong: hsla(0, 0%, 40%, 1);
   --purple-primary: hsl(262, 60%, 79%);
   --purple-strong: hsla(263, 48%, 48%, 1);
+  --purple-light: hsla(0, 0%, 100%, 0.2);
   --purple-hover:hsl(262, 72%, 75%);
   --border-white: hsla(0, 0%, 100%, 0.5);
 }
